syntax = "proto3";

package greet;
option go_package="./greet";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service Greet {
  rpc SayHello(HelloRequest) returns(HelloResponse);
}
